--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,31 @@
   <head>
     <title>Alchemix - Play</title>
   </head>
-  <body style="margin: 0px;">
+  <body style="margin: 0px; overflow: hidden;">
+    <div class="curtain" style="
+      position: fixed;
+      width: 100vw;
+      height: 101vh;
+      top: -10px;
+      background: rgba(0,0,0,0.8);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-size: 4rem;
+      font-weight: 900;
+    ">
+      Loading...
+    </div>
     <h1>Alchemix</h1>
     <svg id="playground" style="width: 100vh; height: 100vh;">
       <g class="item draggable">
         <rect width="200" height="300" fill="red"></rect>
       </g>
     </svg>
+    <div class="curtain">
+      Loading...
+    </div>
     <img id="icon" src="/src/icon.png">
     <script src="/src/index.ts" type="text/typescript"></script>
     <script src="https://rawgit.com/Microsoft/TypeScript/master/lib/typescriptServices.js"></script>
