~~아무것도 모르게따......~~

--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,13 @@
     </div>
     <h1>Alchemix</h1>
     <svg id="playground" style="width: 100vh; height: 100vh;">
-      <g class="item draggable">
-        <rect width="200" height="300" fill="red"></rect>
-      </g>
+      <g class="item draggable"><image width="100px" height="100px" href="/assets/images/bomb.png"></g>
+      <g class="item draggable"><image width="100px" height="100px" href="/assets/images/bomb.png"></g>
     </svg>
     <div class="curtain">
       Loading...
     </div>
-    <img id="icon" src="/src/icon.png">
+    <img id="icon" src="/assets/images/bomb.png">
     <script src="/src/index.ts" type="text/typescript"></script>
     <script src="https://rawgit.com/Microsoft/TypeScript/master/lib/typescriptServices.js"></script>
     <script src="/src/dist/parser.js"></script>
