--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
   </head>
   <body style="margin: 0px; overflow: hidden;">
     <div class="curtain">Loading...</div>
-    <h1>Alchemix</h1>
     <div class="container">
+      <div class="itemList">
+        <div class="itemListHeader">Alchemix</div>
+      </div>
       <svg id="playground"></svg>
     </div>
     <script src="/src/index.ts" type="text/typescript"></script>
